force-app/main/default/objects/ccrz__E_ReviewLike__c/ccrz__E_ReviewLike__c.object-meta.xml
<CustomObject>
    <description>Store &quot;Is This review helpful&quot; flag</description>
    <label>CC Review Like</label>
    <nameField>
        <label>Review Helpful Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CC Review Likes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>