force-app/main/default/objects/ccrz__E_ReviewLike__c/fields/ccrz__AddedBy__c.field-meta.xml
<CustomField>
    <fullName>ccrz__AddedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Added By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Review_Helpful</relationshipName>
    <type>Lookup</type>
</CustomField>