force-app/main/default/objects/ccrz__E_ReviewLike__c/fields/ccrz__Like__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Like__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Like</label>
    <type>Checkbox</type>
</CustomField>